# slick-models-rs

./: Cargo.toml  README.md
src/: lh_models.rs  lib.rs
